--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Besley:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Boolzando</title>
 </head>
 <body>
     <main>
         <div class="products">
-            
+            <div class="product1">
+                <img src="img/1.webp" alt="Levi's">
+                <img src="img/1b.webp" alt="Levi's-2">
+                <div class="text1">
+                    <p>-50%</p>
+                    <p>Sostenibilità</p>
+                    <p>&#10084;</p>
+                    <p>Levi's</p>
+                    <h3>RELAXED FIT TEE UNISEX</h3>
+                    <p>14,99€ <span>29,99€</span></p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
