Inserito :hover nella prima card

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <main>
         <div class="products">
             <div class="product1">
-                <img src="img/1.webp" alt="Levi's">
-                <img src="img/1b.webp" alt="Levi's-2">
+                <div class="images">
+                    <img class="img1" src="img/1.webp" alt="Levi's">
+                    <img class="img2" src="img/1b.webp" alt="Levi's-2">
+                </div>
                 <div class="text1">
                     <p>-50%</p>
                     <p>Sostenibilità</p>
