Aggiunti il resto degli articoli

--- a/index.html
+++ b/index.html
@@ -27,6 +27,71 @@
                     <p>14,99€ <span>29,99€</span></p>
                 </div>
             </div>
+            <div class="product2">
+                <div class="images">
+                    <img class="img3" src="img/2.webp" alt="Guess">
+                    <img class="img4" src="img/2b.webp" alt="Guess-2">
+                </div>
+                <div class="text2">
+                    <p>-30%</p>
+                    <p>&#10084;</p>
+                    <p>Guess</p>
+                    <h3>ROSES TEE</h3>
+                    <p>20,99€ <span>29,99€</span></p>
+                </div>
+            </div>
+            <div class="product3">
+                <div class="images">
+                    <img class="img5" src="img/3.webp" alt="Come-Zucchero-Filato">
+                    <img class="img6" src="img/3b.webp" alt="Come-Zucchero-Filato2">
+                </div>
+                <div class="text3">
+                    <p>-30%</p>
+                    <p>&#10084;</p>
+                    <p>Come Zucchero Filato</p>
+                    <h3>Voglia di colori pastello</h3>
+                    <p>129,99€</p>
+                </div>
+            </div>
+            <div class="product4">
+                <div class="images">
+                    <img class="img7" src="img/4.webp" alt="Levi's">
+                    <img class="img8" src="img/4b.webp" alt="Levi's-2">
+                </div>
+                <div class="text4">
+                    <p>-50%</p>
+                    <p>Sostenibilità</p>
+                    <p>&#10084;</p>
+                    <p>Levi's</p>
+                    <h3>TEE UNISEX</h3>
+                    <p>14,99€ <span>29,99€</span></p>
+                </div>
+            </div>
+            <div class="product5">
+                <div class="images">
+                    <img class="img9" src="img/5.webp" alt="Maya-Deluxe">
+                    <img class="img10" src="img/5b.webp" alt="Maya-Deluxe2">
+                </div>
+                <div class="text5">
+                    <p>&#10084;</p>
+                    <p>Maya Deluxe</p>
+                    <h3>STRIPE BODICE</h3>
+                    <p>99,99€</p>
+                </div>
+            </div>
+            <div class="product6">
+                <div class="images">
+                    <img class="img11" src="img/6.webp" alt="Esprit">
+                    <img class="img12" src="img/6b.webp" alt="Esprit2">
+                </div>
+                <div class="text6">
+                    <p>Sostenibilità</p>
+                    <p>&#10084;</p>
+                    <p>Esprit</p>
+                    <h3>Maglione - Black</h3>
+                    <p>29,99€</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
